--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter  
   
   flutter_launcher_icons: ^0.10.0  
+  url_launcher: ^6.1.5
   # webview_flutter: ^3.0.4 
 
   # The following adds the Cupertino Icons font to your application.
